website/app/styles/doc-components/code-group.scss
/**
 * Copyright (c) HashiCorp, Inc.
 * SPDX-License-Identifier: MPL-2.0
 */

@use "../breakpoints" as breakpoint;
@use "../typography/mixins" as *;

$doc-code-group-footer-height: 48px; // 32px button height + 16px bottom padding

.doc-code-group {
  // Dark theme for expand button
  --doc-code-group-surface-primary: #313A5C;
  --doc-code-group-surface-interactive-hover: #3e4661;
  --doc-code-group-surface-interactive-active: #4D5475;
  --doc-code-group-foreground-primary: white;
  --doc-code-group-border-primary: #4D5475;
  --doc-code-group-shadow-primary: #1C202B50;
  --doc-code-group-shadow-interactive-focus: #FFF;
  --doc-code-group-border-radius: 3px;

  border-radius: var(--doc-code-group-border-radius);

  > :first-child {
    border-top-left-radius: inherit;
    border-top-right-radius: inherit;
  }
}

.doc-code-group__action-bar {
  display: flex;
  flex-direction: row;
  justify-content: space-between;
  border: 1px solid var(--doc-color-gray-400);
  border-bottom: none;
}

.doc-code-group__language-picker {
  display: flex;
  gap: 8px;
  align-items: center;
  margin: 0;
  padding: 6px;
  border: none;
  border-right: 1px solid var(--doc-color-gray-400);
}

.doc-code-group__language-picker-option {
  @include doc-font-style-code();
  padding: 4px 12px;
  color: var(--doc-color-gray-200);
  border: 1px solid transparent;
  border-radius: var(--doc-code-group-border-radius);
  cursor: pointer;

  &:hover {
    background-color: var(--doc-color-gray-600);
  }

  &:active {
    background-color: var(--doc-color-gray-500);
  }

  &:focus-within {
    box-shadow: 0 0 0 2px #6BA1FF;
  }

  &:has(input:checked) {
    color: var(--doc-color-feedback-information-100);
    background-color: var(--doc-color-feedback-information-400);
    border-color: var(--doc-color-feedback-information-100);

    &:hover {
      background-color: var(--doc-color-feedback-information-300);
    }

    &:active {
      color: #0033B0;
      background-color: #A7C5FF;
    }
  }
}

.doc-code-group__secondary-actions {
  display: flex;
  flex-direction: row;
  flex-grow: 1;
  justify-content: flex-end;
}

.doc-code-group__copy-button-container {
  padding: 6px;
  border-left: 1px solid var(--doc-color-gray-400);
}

.doc-code-group__preview {
  padding: 16px;
  background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 2 2'%3E%3Cpath d='M1 2V0h1v1H0v1z' fill-opacity='.05'/%3E%3C/svg%3E");
  // use this to fine tune the size of the checkered pattern
  background-size: 16px 16px;
  border: 1px solid var(--doc-color-gray-400);
  border-bottom: none;

  @include breakpoint.medium () {
    padding: 24px;
  }

  @include breakpoint.large () {
    padding: 32px;
  }
}

// Optional separator for rendered code examples
.doc-code-group-hr {
  margin: 32px 0;
}

.doc-code-group__code-snippet-footer {
  position: absolute;
  right: 12px;
  bottom: 16px;
  z-index: 1; // fix issue where footer was behind the code block
  pointer-events: none; // fix issue with scrolling when hovering over the footer

  // re-enable pointer events for the button (or any content inside the footer)
  > * {
    pointer-events: auto;
  }
}

.doc-code-group__expand-button {
  display: flex;
  align-items: center;
  justify-content: center;
  width: 32px;
  height: 32px;
  color: var(--doc-code-group-foreground-primary);
  background-color: var(--doc-code-group-surface-primary);
  border: 1px solid var(--doc-code-group-border-primary);
  border-radius: var(--doc-code-group-border-radius);
  box-shadow: 0 2px 4px 2px var(--doc-code-group-shadow-primary);
  cursor: pointer;

  &:hover {
    background-color: var(--doc-code-group-surface-interactive-hover);
  }

  &:active {
    background-color: var(--doc-code-group-surface-interactive-active);
  }

  &:focus {
    box-shadow: 0 0 0 2px var(--doc-code-group-shadow-interactive-focus);
  }

  &:focus-visible {
    outline: none;
  }
}

.doc-code-group__code-snippet-wrapper {
  position: relative;
  border-bottom-right-radius: inherit;
  border-bottom-left-radius: inherit;

  &:has(.doc-code-group__code-snippet-footer) code {
    // account for the footer at the bottom of the code snippet
    padding-bottom: $doc-code-group-footer-height;
  }

  .shiki-code-block {
    border-bottom-right-radius: inherit;
    border-bottom-left-radius: inherit;

    .shiki-code-block__code {
      --ember-shiki-border-radius: 0px;

      border-bottom-right-radius: inherit;
      border-bottom-left-radius: inherit;

      code {
        scrollbar-width: thin;
        scrollbar-color: var(--doc-color-gray-400) var(--doc-color-gray-300);
      }
    }
  }
}

